k8s/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: react-lab-app-service
spec:
  selector:
    app: react-lab-app
  ports:
    - protocol: TCP
      port: 80
      targetPort: 80
  type: ClusterIP
