k8s/ingress-react.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: react-lab-app-ingress
  namespace: default
spec:
  ingressClassName: nginx
  rules:
    - http:
        paths:
          - path: /react
            pathType: Prefix
            backend:
              service:
                name: react-lab-app-service
                port:
                  number: 80
